More RMS inspiried changes.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -68,7 +68,7 @@ to make to the gperf utility</a>.
 
 <h3>CVS tags and checkouts</h3>
 
-<p> You can check out the latest version of the gcc-2.95 release
+<p> You can check out the latest version of the GCC 2.95 release
 branch with the following command:
 
 <pre>	cvs -z 9 co -rgcc-2_95-branch egcs</pre>
@@ -102,7 +102,7 @@ the compiler itself.  Use `<code>cvs co wwwdocs</code>` to check out
 the web pages.
 
 <hr>
-<i>Last modified on July  9, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
