More changes requested by RMS.

--- a/htdocs/egcs-1.1/caveats.html
+++ b/htdocs/egcs-1.1/caveats.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<title>egcs-1.1 Caveats</title>
+<title>EGCS 1.1 Caveats</title>
 </head>
 <body>
-<h1 align="center">egcs-1.1 Caveats</h1>
+<h1 align="center">EGCS 1.1 Caveats</h1>
 
 <ul>
-  <li>egcs has an integrated libstdc++, but does not have an integrated libg++.
-  Furthermore old libg++ releases will not work with egcs; HJ Lu has made a 
+  <li>EGCS has an integrated libstdc++, but does not have an integrated libg++.
+  Furthermore old libg++ releases will not work with EGCS; HJ Lu has made a 
   <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz">
-  libg++ snapshot</a> available which may work with egcs.
+  libg++ snapshot</a> available which may work with EGCS.
   <br>Note most C++ programs only need libstdc++.
 
   <li> Exception handling may not work with shared libraries, particularly
@@ -17,24 +17,24 @@
   handling is known to work on x86-linux platforms with shared libraries.
 
   <li> Some versions of the Linux kernel have bugs which prevent them
-  from being compiled or from running when compiled by egcs.  See
+  from being compiled or from running when compiled by EGCS.  See
   <a href="../faq.html#linuxkernel">the FAQ</a> for additional information.
 
-  <li> In general, egcs is more rigorous about rejecting invalid C++ code
-  or deprecated C++ constructs than g++-2.7, g++-2.8 or egcs-1.0.  As a result
-  it may be necessary to fix C++ code before it will compile with egcs.
+  <li> In general, EGCS is more rigorous about rejecting invalid C++ code
+  or deprecated C++ constructs than g++-2.7, g++-2.8 or EGCS 1.0.  As a result
+  it may be necessary to fix C++ code before it will compile with EGCS.
 
   <li>G++ is also converting toward the ISO C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
   versions of g++) may no longer be accepted.
 
-  <li>egcs-1.1 compiled C++ code is not binary compatible with egcs-1.0.x
-  or gcc-2.8.x due to changes necessary to support thread safe exception
+  <li>EGCS 1.1 compiled C++ code is not binary compatible with EGCS 1.0.x
+  or GCC 2.8.x due to changes necessary to support thread safe exception
   handling.
 </ul>
 
-<p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  March 15, 1999</i>
+<p><a href="../index.html">Return to the GCC home page</a>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
