--- a/htdocs/egcs-1.1/egcs-1.1-branch.html
+++ b/htdocs/egcs-1.1/egcs-1.1-branch.html
@@ -1,20 +1,20 @@
 <html>
 <head>
-<title>egcs-1.1 branch </title>
+<title>EGCS 1.1 branch </title>
 </head>
 <body>
-<h1 align="center">egcs-1.1 branch</h1>
+<h1 align="center">EGCS 1.1 branch</h1>
 
-<p>We have made a branch in the source tree for egcs-1.1.  Depending on your
+<p>We have made a branch in the source tree for EGCS 1.1.  Depending on your
 situation you have three choices for handling your CVS tree.
 <ol>
   <li> Do nothing.  Your existing CVS tree will continue to track the mainline
-       egcs sources.
-  <li> Track just the egcs-1.1 release.  You can convert your existing CVS tree
-       to track the egcs-1.1 release with the command:
+       EGCS sources.
+  <li> Track just the EGCS 1.1 release.  You can convert your existing CVS tree
+       to track the EGCS 1.1 release with the command:
        <br><tt>cvs update -regcs_1_1_branch</tt>
-  <li> Track both the egcs-1.1 release and the development sources.  You will
-       need to check out the egcs-1.1 release in a separate directory using the
+  <li> Track both the EGCS 1.1 release and the development sources.  You will
+       need to check out the EGCS 1.1 release in a separate directory using the
        command:
        <br><tt>cvs co -regcs_1_1_branch egcs</tt>
 </ol>
@@ -22,24 +22,24 @@ situation you have three choices for handling your CVS tree.
 <p>Considering that the primary focus of the project is on the egc-1.1 release,
 option #2 or #3 is recommended.
 
-<p>FTP snapshots will track the egcs-1.1 release only.  After egcs-1.1 is
+<p>FTP snapshots will track the EGCS 1.1 release only.  After EGCS 1.1 is
 released, snapshots will return to tracking the mainline sources.
 
 <hr>
-<p>All patches for the egcs-1.1 release branch must be approved by either
+<p>All patches for the EGCS 1.1 release branch must be approved by either
 someone with global write privs or that maintains the specific file being
 patched.   At some point in the near future, all patches will need to go through
-the release coordinator.  A message will be sent to the egcs list at that time.
+the release coordinator.  A message will be sent to the EGCS list at that time.
 
-<p>We are only accepting bugfix patches for the egcs-1.1 release.
+<p>We are only accepting bugfix patches for the EGCS 1.1 release.
 
-<p>You can still submit patches for the mainline egcs sources.  However,
+<p>You can still submit patches for the mainline EGCS sources.  However,
 responses to such patches may be delayed.
 
 
 <hr>
-<p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 14, 1998</i>
+<p><a href="../index.html">Return to the GCC home page</a>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
