--- a/htdocs/egcs-1.1/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1/egcs-1.1-test.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>egcs-1.1 test strategy</title>
+<title>EGCS 1.1 test strategy</title>
 </head>
 <body>
-<h1 align="center">egcs-1.1 test strategy</h1>
+<h1 align="center">EGCS 1.1 test strategy</h1>
 
 <ul>
   <li> <a href="regress.html">No testsuite regressions on major platforms</a>.  DONE.
@@ -45,7 +45,7 @@
 	<li> x86 failures
 	  <ul>
 	    <li> There are minor C++ violations in guavac, sgml-tools and
-		 linuxconf.  These are not egcs failures.
+		 linuxconf.  These are not EGCS failures.
 	    <li> We've built all the appropriate SRPMS and installed the
 		 resulting binaries, then rebuilt the SRPMS again.
 	  </ul>
@@ -69,7 +69,7 @@
 </ul>
 
 <hr>
-<i>Last modified on February 18, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
