--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -1,20 +1,20 @@
 <html>
 <head>
-<title>egcs-1.1.2</title>
+<title>EGCS 1.1.2</title>
 </head>
 <body>
-<h1 align="center">egcs-1.1.2</h1>
+<h1 align="center">EGCS 1.1.2</h1>
 
 <p>March 15, 1999
 
-<p>We are pleased to announce the release of egcs-1.1.2.
+<p>We are pleased to announce the release of EGCS 1.1.2.
 
-<p>egcs is a collaborative effort involving several groups of hackers using
+<p>EGCS is a collaborative effort involving several groups of hackers using
 an open development model to accelerate development and testing of GNU
 compilers and runtime libraries.
 
-<p>egcs-1.1.2 is a minor update to the egcs-1.1.1 compiler to fix several
-serious problems in egcs-1.1.1.
+<p>EGCS 1.1.2 is a minor update to the EGCS 1.1.1 compiler to fix several
+serious problems in EGCS 1.1.1.
 
 <ul>
   <li> General improvements and fixes
@@ -160,44 +160,44 @@ serious problems in egcs-1.1.1.
   </ul>
 </ul>
 
-<p>An important goal of egcs is to allow wide scale testing of new features
-and optimizations which are still under development.  However, egcs has been
+<p>An important goal of EGCS is to allow wide scale testing of new features
+and optimizations which are still under development.  However, EGCS has been
 carefully tested and should be comparable in quality to most gcc releases.
 
-<p>egcs-1.1.2 is based on the June 6, 1998 snapshot of the gcc-2.8 development
-sources; it contains all of the new features found in gcc-2.8.1 as well as all
+<p>EGCS 1.1.2 is based on the June 6, 1998 snapshot of the GCC 2.8 development
+sources; it contains all of the new features found in GCC 2.8.1 as well as all
 new development from gcc2 up to June 6, 1998.
 
 <p>See the <a href="features.html">new features</a> page for a more complete
-list of new features found in egcs-1.1 releases.
+list of new features found in EGCS 1.1 releases.
 
-<p>The egcs-1.1.2 release includes installation instructions in both HTML
+<p>The EGCS 1.1.2 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
-of the egcs-1.1.2 distribution).  However, we also keep the most up to date
+of the EGCS 1.1.2 distribution).  However, we also keep the most up to date
 <a href="../install/index.html">installation instructions</a>
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
-<p> The egcs project would like to thank the numerous people that have
+<p> The EGCS project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
 <a href="../thanks.html">amazing group of volunteers</a> is what makes
-egcs successful.
+EGCS successful.
 
 <p>And finally, we can't in good conscience fail to mention some
-<a href="caveats.html">caveats</a> to using egcs-1.1.2.
+<a href="caveats.html">caveats</a> to using EGCS 1.1.2.
 
 <! -- <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.1.2
+Download EGCS 1.1.2
 from egcs.cygnus.com (USA California)</a> -->
 <p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.1.2 from go.cygnus.com (USA California - High speed link
+Download EGCS 1.1.2 from go.cygnus.com (USA California - High speed link
 provided by Stanford)</a>
 
-<p>The egcs-1.1.2 release is also available on many
+<p>The EGCS 1.1.2 release is also available on many
 <a href="../mirrors.html">mirror sites</a>.
 
 <hr>
-<i>Last modified on March 17, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
