--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -1,28 +1,28 @@
 <html>
 <head>
-<title>egcs-1.1</title>
+<title>EGCS 1.1</title>
 </head>
 <body>
-<h1 align="center">egcs-1.1</h1>
+<h1 align="center">EGCS 1.1</h1>
 
 <p>September 3, 1998
 
-<p>We are pleased to announce the release of egcs-1.1.
+<p>We are pleased to announce the release of EGCS 1.1.
 
 <p>EGCS is a free software project to further the development of the
 GNU compilers using an open development environment.
 
-<p>egcs-1.1 is a major new release of the egcs compiler system.  It has been
-<a href="egcs-1.1-test.html">extensively tested</a> and is believed to be
+<p>EGCS 1.1 is a major new release of the EGCS compiler system.  It has been
+<a href="EGCS 1.1-test.html">extensively tested</a> and is believed to be
 stable and suitable for widespread use.
 
-<p>egcs-1.1 is based on an June 6, 1998 snapshot of the gcc-2.8 development
-sources; it contains all of the new features found in gcc-2.8.1 as well as
-all new development from gcc2 up to June 6, 1998.
+<p>EGCS 1.1 is based on an June 6, 1998 snapshot of the GCC 2.8 development
+sources; it contains all of the new features found in GCC 2.8.1 as well as
+all new development from GCC up to June 6, 1998.
 
 
-<p>egcs also contains many improvements and features not found in gcc2 or
-in older versions of egcs.
+<p>EGCS also contains many improvements and features not found in GCC or
+in older versions of EGCS.
 <ul>
   <li> Global common subexpression elimination and
   global constant/copy propagation (aka <a href="../news/gcse.html">gcse</a>)
@@ -38,36 +38,36 @@ in older versions of egcs.
 </ul>
 
 <p>See the <a href="features.html">new features</a> page for a more complete
-list of new features found in egcs-1.1 releases.
+list of new features found in EGCS 1.1 releases.
 
-<p>The egcs-1.1 release includes installation instructions in both HTML
+<p>The EGCS 1.1 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
-of the egcs-1.1 distribution).  However, we also keep the most up to date
+of the EGCS 1.1 distribution).  However, we also keep the most up to date
 <a href="../install/index.html">installation instructions </a>
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
-<p> The egcs project would like to thank the numerous people that have
+<p> The EGCS project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
 <a href="../thanks.html">amazing group of volunteers</a> is what makes
-egcs successful.
+EGCS successful.
 
 <p>And finally, we can't in good conscience fail to mention some
-<a href="caveats.html">caveats</a> to using egcs-1.1.
+<a href="caveats.html">caveats</a> to using EGCS 1.1.
 
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.1
+Download EGCS 1.1
 from egcs.cygnus.com (USA California)</a>
 <p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.1 from go.cygnus.com (USA California -- High speed link
+Download EGCS 1.1 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 
-<p>The egcs-1.1 release is also available on many mirror sites.<br>
+<p>The EGCS 1.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
 
 
 <hr>
-<i>Last modified on June 20, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
