--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>egcs-1.1 New Features</title>
+<title>EGCS 1.1 New Features</title>
 </head>
 <body>
-<h1 align="center">egcs-1.1 new features</h1>
+<h1 align="center">EGCS 1.1 new features</h1>
 
 <ul>
   <li>Integrated GNU Fortran (<code>g77</code>) compiler and runtime library
@@ -41,7 +41,7 @@
   <li> cpplib has been greatly improved and may be suitable for limited use.
   <li> Memory footprint for the compiler has been significantly reduced
   for some pathalogical cases.
-  <li> The time to build egcs has been improved for certain targets
+  <li> The time to build EGCS has been improved for certain targets
   (particularly the alpha and mips platforms).
   <li> Many infrastructure improvements throughout the compiler, plus the
   usual mountain of bugfixes and minor improvements.
@@ -53,7 +53,7 @@
 	<li> Alpha port has been tuned for the EV6 processor and has an
 	optimized expanstion of memcpy/bzero.  The Alpha port now uses
 	the Haifa scheduler.
-	<li> RS6000/PowerPC: egcs-1.1 includes support for the Power64
+	<li> RS6000/PowerPC: EGCS 1.1 includes support for the Power64
 	architecture and aix4.3 support.  The RS6000/PowerPC port now
 	uses the Haifa scheduler.
 	<li> x86: Alignment of static store data and jump targets is per
@@ -65,13 +65,13 @@
 	mips16 ISA support.
 	<li> M68k has many micro-optimizations and Coldfire fixes.
      </ul>
-  <li>Core compiler is based on the gcc2 development tree from June 9, 1998,
-  so we have all of the <a href="../egcs-1.0/features-2.8.html">features
-  found in gcc-2.8</a>.
+  <li>Core compiler is based on the GCC development tree from June 9, 1998,
+  so we have all of the <a href="../EGCS 1.0/features-2.8.html">features
+  found in GCC 2.8</a>.
 </ul>
 
-<p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  June 20, 1999</i>
+<p><a href="../index.html">Return to the EGCS home page</a>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
