--- a/htdocs/egcs-1.1/fortran.html
+++ b/htdocs/egcs-1.1/fortran.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>egcs-1.1 Fortran News</title>
+<title>EGCS 1.1 Fortran News</title>
 </head>
 <body>
 
@@ -12,8 +12,8 @@
 is updated daily from the main development sources, as is its
 <a href="../onlinedocs/g77_toc.html">documentation</a>.</p>
 
-<p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  April 1, 1999</i>
+<p><a href="../index.html">Return to the EGCS home page</a>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
