--- a/htdocs/egcs-1.1/regress.html
+++ b/htdocs/egcs-1.1/regress.html
@@ -1,39 +1,39 @@
 <html>
 <head>
-<title>egcs-1.1 regression test strategy</title>
+<title>EGCS 1.1 regression test strategy</title>
 </head>
 <body>
-<h1 align="center">egcs-1.1 regression test strategy</h1>
+<h1 align="center">EGCS 1.1 regression test strategy</h1>
 
 <p>One of the critical steps in making releases is regression testing.  For
-egcs-1.1 we want to perform regression tests against gcc-2.8.1 and 
-egcs-1.0.3a.
+EGCS 1.1 we want to perform regression tests against GCC 2.8.1 and 
+EGCS 1.0.3a.
 
 <p>Since it is impossible to test every platform, we have selected a list
-of popular platforms for which egcs-1.1 should have no regressions relative
-to egcs-1.0.3a or gcc-2.8.1.
+of popular platforms for which EGCS 1.1 should have no regressions relative
+to EGCS 1.0.3a or GCC 2.8.1.
 
 <p>We encourage testing of platforms not on the official regression test
 list.  However, the "no regressions" policy does not necessarily apply
 to targets not on the official regression test list.
 
 <p>Contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> directly if you
-want to help with the regression testing phase of the egcs-1.1 release cycle.
+want to help with the regression testing phase of the EGCS 1.1 release cycle.
 
 <h2>How to run the regression tests</h2>
 
-<p>  First, you must get out of the egcs object directory.  So change 
+<p>  First, you must get out of the EGCS object directory.  So change 
      directories into your home directory, /tmp or somewhere else.
 
 <p>  Second, you need an appropriate site.exp.  Here is a template:
 
 <pre>
-# snapdir should point to the top-level directory of an unpacked egcs-1.1
+# snapdir should point to the top-level directory of an unpacked EGCS 1.1
 # snapshot
-set snapdir "/some/place/egcs-19980715"
+set snapdir "/some/place/EGCS 19980715"
 
-# set old_release_prefix to the prefix directory of an installed egcs-1.0.3a.
-set old_release_prefix /prefix/for/egcs-1.0.3a
+# set old_release_prefix to the prefix directory of an installed EGCS 1.0.3a.
+set old_release_prefix /prefix/for/EGCS 1.0.3a
 
 set rootme "."
 set target_triplet [exec "$snapdir/config.guess"]
@@ -59,7 +59,7 @@ appropriate values.
 those files to the testing coordinator <a href="mailto:law@cygnus.com">
 law@cygnus.com</a>.
 
-<p>Note that you will receive many failures from gcc-2.8.1 and egcs-1.0.3a when
+<p>Note that you will receive many failures from GCC 2.8.1 and EGCS 1.0.3a when
 running the gcc testsuites because those versions of the compiler do not
 support -Os.
 <hr>
@@ -72,13 +72,13 @@ support -Os.
 Platform
 </th>
 <th>
-gcc-2.8.1
+GCC 2.8.1
 </th>
 <th>
-egcs-1.0.3a
+EGCS 1.0.3a
 </th>
 <th>
-egcs-1.1
+EGCS 1.1
 </th>
 <th>
 regressions
@@ -505,7 +505,7 @@ NONE
 test, so I don't consider it critical, but I have asked for a volunteer
 to look into the problem.
 
-<p><i>Last modified on August 28, 1998.</i>
+<p><i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
