More changes recommended by RMS

--- a/htdocs/egcs-1.0/buildstat.html
+++ b/htdocs/egcs-1.0/buildstat.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title> Build and Test status for egcs-1.0</title>
+<title> Build and Test status for EGCS 1.0</title>
 </head>
 <body>
-<h1 align="center">Build and Test status for egcs-1.0</h1>
+<h1 align="center">Build and Test status for EGCS 1.0</h1>
 
 <p>Regression testing is relative to gcc-2.7.*; only regressions relative
 to gcc-2.7 are noted.
@@ -12,7 +12,7 @@ to gcc-2.7 are noted.
 included in the regression test status below.
 
 <p><b>alpha-dec-osf2.0</b><br>
-3-staged native.  No gcc-2.7 results to compare with, but egcs test results
+3-staged native.  No gcc-2.7 results to compare with, but EGCS test results
 look good.
 
 <p><b>alpha-dec-osf3.2</b><br>
@@ -22,7 +22,7 @@ look good.
 3-staged native.  Testing in progress.
 
 <p><b>alphaev56-dec-osf4.0b</b><br>
-3 staged native.  Note egcs-1.0 treats ev56 just like ev5 .
+3 staged native.  Note EGCS 1.0 treats ev56 just like ev5 .
 
 <p><b>alphaev5-unknown-linux-gnulibc1</b><br>
 3-staged native using binutils-2.8.1.  No regressions
@@ -62,7 +62,7 @@ failures, probably due to old binutils too.
 <p><b>i586-pc-linux-gnulibc1 RH4.2</b><br>
 
 <p><b>i?86-pc-solaris*</b><br>
-You'll need a patch to fix an egcs bug on this platform.
+You'll need a patch to fix an EGCS bug on this platform.
 <a href="http://egcs.cygnus.com/faq.html#x86solaris">x86 solaris patch</a>
 
 
@@ -136,7 +136,7 @@ conflicting g++ test results ont his platform.
 
 <hr>
 <p>
-<i>Last modified on December 5, 1997.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
