--- a/htdocs/egcs-1.0/c++features.html
+++ b/htdocs/egcs-1.0/c++features.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>egcs-1.0 C++ Features</title>
+<title>EGCS 1.0 C++ Features</title>
 </head>
 <body>
-<h1 align="center">egcs-1.0 C++ Features</h1>
+<h1 align="center">EGCS 1.0 C++ Features</h1>
 
 
 <pre>
@@ -198,8 +198,8 @@
   the exception handling work.
 </pre>
 
-<p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  November 23, 1997</i>
+<p><a href="../index.html">Return to the GCC home page</a>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
