--- a/htdocs/egcs-1.0/caveats.html
+++ b/htdocs/egcs-1.0/caveats.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<title>egcs-1.0 Caveats</title>
+<title>EGCS 1.0 Caveats</title>
 </head>
 <body>
-<h1 align="center">egcs-1.0 Caveats</h1>
+<h1 align="center">EGCS 1.0 Caveats</h1>
 
 <ul>
-  <li>egcs has an integrated libstdc++, but does not have an integrated libg++.
+  <li>EGCS has an integrated libstdc++, but does not have an integrated libg++.
   Furthermore old libg++ releases will not work with egc; HJ Lu has made a 
   <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz">
-  libg++ snapshot</a> available which may work with egcs.
+  libg++ snapshot</a> available which may work with EGCS.
   <br>Note most C++ programs only need libstdc++.
 
   <li>Note that using -pedantic or -Wreturn-type can cause an explosion in the
@@ -22,22 +22,22 @@
   to work on x86-linux platforms with shared libraries.
 
   <li> Some versions of the Linux kernel have bugs which prevent them
-  from being compiled or from running when compiled by egcs.  See
+  from being compiled or from running when compiled by EGCS.  See
   <a href="../faq.html#linuxkernel">the FAQ</a> for additional information.
 
-  <li> In general, egcs is more rigorous about rejecting invalid C++ code
-  or deprecated C++ constructs than g++-2.7.  As a result it may be necessary
-  to fix C++ code before it will compile with egcs.
+  <li> In general, EGCS is more rigorous about rejecting invalid C++ code
+  or deprecated C++ constructs than G++ 2.7.  As a result it may be necessary
+  to fix C++ code before it will compile with EGCS.
 
   <li>G++ is also aggressively tracking the C++ standard; as a result code
   which was previously valid (and thus accepted by other compilers and older
-  versions of g++) may no longer be accepted.
+  versions of G++) may no longer be accepted.
 
-  <li>egcs-1.0 may not work with Red Hat Linux 5.0 on all targets.  egcs-1.0.x
+  <li>EGCS 1.0 may not work with Red Hat Linux 5.0 on all targets.  EGCS 1.0.x
   and later releases should work with Red Hat Linux 5.0.
 </ul>
 
-<p><a href="../index.html">Return to the egcs home page</a>
+<p><a href="../index.html">Return to the GCC home page</a>
 <p><i>Last modified:  August 27, 1998</i>
 
 </body>
