--- a/htdocs/egcs-1.0/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0/egcs-1.0.1.html
@@ -1,56 +1,56 @@
 <html>
 <head>
-<title>egcs-1.0.1</title>
+<title>EGCS 1.0.1</title>
 </head>
 <body>
-<h1 align="center">egcs-1.0.1</h1>
+<h1 align="center">EGCS 1.0.1</h1>
 
 <p>January 6, 1998
 
-<p>We are pleased to announce the release of egcs-1.0.1.
+<p>We are pleased to announce the release of EGCS 1.0.1.
 
-<p>egcs is a collaborative effort involving several groups of hackers using
+<p>EGCS is a collaborative effort involving several groups of hackers using
 an open development model to accelerate development and testing of GNU
 compilers and runtime libraries.
 
-<p>egcs-1.0.1 is a minor update to the egcs-1.0 compiler to fix a few critical
-bugs and add support for Red Hat 5.0 Linux.  Changes since the egcs-1.0
+<p>EGCS 1.0.1 is a minor update to the EGCS 1.0 compiler to fix a few critical
+bugs and add support for Red Hat 5.0 Linux.  Changes since the EGCS 1.0
 release:
 
 <ul>
   <li> Add support for Red Hat 5.0 Linux and better support for Linux
   systems using glibc2.
 
-  <p>Many programs failed to link when compiled with egcs-1.0 on Red Hat 5.0 or
-  on systems with newer versions of glibc2.  egcs-1.0.1 should fix these
+  <p>Many programs failed to link when compiled with EGCS 1.0 on Red Hat 5.0 or
+  on systems with newer versions of glibc2.  EGCS 1.0.1 should fix these
   problems.
 
-  <p><li> Compatability with both egcs-1.0 and gcc-2.8 libgcc exception handling
+  <p><li> Compatability with both EGCS 1.0 and GCC 2.8 libgcc exception handling
   interfaces.
 
   <p>To avoid future compatibility problems, we strongly urge anyone who is
   planning on distributing shared libraries that contain C++ code to upgrade
-  to egcs-1.0.1 first.
+  to EGCS 1.0.1 first.
 
-  <p>Soon after egcs-1.0 was released, the gcc developers made some
+  <p>Soon after EGCS 1.0 was released, the GCC developers made some
   incompatible changes in libgcc's exception handling interfaces.  These
   changes were needed to solve problems on some platforms.  This means that
-  gcc-2.8.0, when released, will not be seamlessly compatible with shared
-  libraries built by egcs-1.0.  The reason is that the libgcc.a in gcc-2.8.0
+  GCC 2.8.0, when released, will not be seamlessly compatible with shared
+  libraries built by EGCS 1.0.  The reason is that the libgcc.a in GCC 2.8.0
   will not contain a function needed by the old interface.
 
   <p>The result of this is that there may be compatibility problems with shared
-  libraries built by egcs-1.0 when used with gcc-2.8.0.
+  libraries built by EGCS 1.0 when used with GCC 2.8.0.
 
-  <p>With egcs-1.0.1, generated code uses the new (gcc-2.8.0) interface, and
+  <p>With EGCS 1.0.1, generated code uses the new (GCC 2.8.0) interface, and
   libgcc.a has the support routines for both the old and the new interfaces
-  (so egcs-1.0.1 and egcs-1.0 code can be freely mixed, and egcs-1.0.1 and
-  gcc-2.8.0 code can be freely mixed).  
+  (so EGCS 1.0.1 and EGCS 1.0 code can be freely mixed, and EGCS 1.0.1 and
+  GCC 2.8.0 code can be freely mixed).  
 
-  <p>The maintainers of gcc 2.x have decided against including seamless support
+  <p>The maintainers of GCC 2.x have decided against including seamless support
   for the old interface in 2.8.0, since it was never "official", so to avoid
   future compatibility problems we recommend against distributing any shared
-  libraries built by egcs-1.0 that contain C++ code (upgrade to 1.0.1 and
+  libraries built by EGCS 1.0 that contain C++ code (upgrade to 1.0.1 and
   use that).
 
   <p><li> Various bugfixes in the x86, hppa, mips, and rs6000/ppc backends.
@@ -81,16 +81,16 @@ release:
 
 
 
-<p>An important goal of egcs is to allow wide scale testing of new features
-and optimizations which are still under development.  However, egcs has been
-carefully tested and should be comparable in quality to most gcc releases.
+<p>An important goal of EGCS is to allow wide scale testing of new features
+and optimizations which are still under development.  However, EGCS has been
+carefully tested and should be comparable in quality to most GCC releases.
 
-<p>egcs-1.0.1 is based on an August 2, 1997 snapshot of the gcc-2.8 development
-sources; it contains nearly all of the new features found in gcc-2.8.
+<p>EGCS 1.0.1 is based on an August 2, 1997 snapshot of the GCC 2.8 development
+sources; it contains nearly all of the new features found in GCC 2.8.
 
 
-<p>egcs also contains many improvements and features not found in gcc-2.7
-and even the soon to be released gcc-2.8 compilers.
+<p>EGCS also contains many improvements and features not found in GCC 2.7
+and even the soon to be released GCC 2.8 compilers.
 <ul>
   <li>Integrated C++ runtime libraries, including support for most major
   linux systems!
@@ -102,29 +102,29 @@ and even the soon to be released gcc-2.8 compilers.
 </ul>
 
 <p>See the <a href="features.html">new features</a> page for a more complete
-list of new features found in egcs-1.0.x releases.
+list of new features found in EGCS 1.0.x releases.
 
-<p>The egcs-1.0.1 release includes installation instructions in both HTML
+<p>The EGCS 1.0.1 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
-of the egcs-1.0.1 distribution).  However, we also keep the most up to date
+of the EGCS 1.0.1 distribution).  However, we also keep the most up to date
 <a href="../install/index.html">installation instructions</a>
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
 <p>And, we can't in good conscience fail to mention some
-<a href="caveats.html">caveats</a> to using egcs.
+<a href="caveats.html">caveats</a> to using EGCS.
 
 <p>Update: Big thanks to Stanford for providing a high speed link for
-downloading egcs (go.cygnus.com)!
+downloading EGCS (go.cygnus.com)!
 
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.0.1
+Download EGCS 1.0.1
 from ftp.cygnus.com (USA California)</a>
 <p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.0.1 from go.cygnus.com (USA California -- High speed link
+Download EGCS 1.0.1 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 
-<p>The egcs-1.0.1 release is also available on many mirror sites.<br>
+<p>The EGCS 1.0.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html">Goto mirror list to find a closer site</a>
 
 <p>We'd like to thank the numerous people that have contributed new
@@ -132,7 +132,7 @@ features, test results, bugfixes, etc.  Unfortunately, they're far
 too numerous to mention by name.
 
 <hr>
-<i>Last modified on February 22, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
