--- a/htdocs/egcs-1.0/features.html
+++ b/htdocs/egcs-1.0/features.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>egcs-1.0 Features</title>
+<title>EGCS 1.0 Features</title>
 </head>
 <body>
-<h1 align="center">egcs-1.0 features</h1>
+<h1 align="center">EGCS 1.0 features</h1>
 
 <ul>
   <li>Core compiler is based on the gcc2 development tree from Aug 2, 1997, so
   we have most of the
-  <a href="features-2.8.html">features found in gcc-2.8</a>.
+  <a href="features-2.8.html">features found in GCC 2.8</a>.
   <li>Integrated GNU Fortran compiler based on g77-0.5.22-19970929.
   <li>Vast improvements in the C++ compiler; so many they have 
   <a href="c++features.html">page of their own!</a>
@@ -43,7 +43,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  December 8, 1997</i>
+<p><i>Last modified:  July 28, 1999</i>
 
 </body>
 </html>
