--- a/htdocs/egcs-1.0/egcs-1.0.3.html
+++ b/htdocs/egcs-1.0/egcs-1.0.3.html
@@ -1,19 +1,19 @@
 <html>
 <head>
-<title>egcs-1.0.3</title>
+<title>EGCS 1.0.3</title>
 </head>
 <body>
-<h1 align="center">egcs-1.0.3</h1>
+<h1 align="center">EGCS 1.0.3</h1>
 
 <p>May 15, 1998
 
-<p>We are pleased to announce the release of egcs-1.0.3.
+<p>We are pleased to announce the release of EGCS 1.0.3.
 
-<p>egcs is a collaborative effort involving several groups of hackers using
+<p>EGCS is a collaborative effort involving several groups of hackers using
 an open development model to accelerate development and testing of GNU
 compilers and runtime libraries.
 
-<p>egcs-1.0.3 is a minor update to the egcs-1.0.2 compiler to fix a few
+<p>EGCS 1.0.3 is a minor update to the EGCS 1.0.2 compiler to fix a few
 problems reported by Red Hat for builds of Red Hat 5.1.
 
 <ul>
@@ -39,16 +39,16 @@ problems reported by Red Hat for builds of Red Hat 5.1.
 </ul>
 
 
-<p>An important goal of egcs is to allow wide scale testing of new features
-and optimizations which are still under development.  However, egcs has been
-carefully tested and should be comparable in quality to most gcc releases.
+<p>An important goal of EGCS is to allow wide scale testing of new features
+and optimizations which are still under development.  However, EGCS has been
+carefully tested and should be comparable in quality to most GCC releases.
 
-<p>egcs-1.0.3 is based on an August 2, 1997 snapshot of the gcc-2.8 development
-sources; it contains nearly all of the new features found in gcc-2.8.
+<p>EGCS 1.0.3 is based on an August 2, 1997 snapshot of the GCC 2.8 development
+sources; it contains nearly all of the new features found in GCC 2.8.
 
 
-<p>egcs also contains many improvements and features not found in gcc-2.7 or
-gcc-2.8.
+<p>EGCS also contains many improvements and features not found in GCC 2.7 or
+GCC 2.8.
 <ul>
   <li>Integrated C++ runtime libraries, including support for most major
   GNU/Linux systems!
@@ -61,29 +61,29 @@ gcc-2.8.
 </ul>
 
 <p>See the <a href="features.html">new features</a> page for a more complete
-list of new features found in egcs-1.0.x releases.
+list of new features found in EGCS 1.0.x releases.
 
-<p>The egcs-1.0.3 release includes installation instructions in both HTML
+<p>The EGCS 1.0.3 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
-of the egcs-1.0.3 distribution).  However, we also keep the most up to date
+of the EGCS 1.0.3 distribution).  However, we also keep the most up to date
 <a href="../install/index.html">installation instructions</a>
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
 <p>And, we can't in good conscience fail to mention some
-<a href="caveats.html">caveats</a> to using egcs.
+<a href="caveats.html">caveats</a> to using EGCS.
 
 <p>Update: Big thanks to Stanford for providing a high speed link for
-downloading egcs (go.cygnus.com)!
+downloading EGCS (go.cygnus.com)!
 
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.0.3
+Download EGCS 1.0.3
 from ftp.cygnus.com (USA California)</a>
 <p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.0.3 from go.cygnus.com (USA California -- High speed link
+Download EGCS 1.0.3 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 
-<p>The egcs-1.0.3 release is also available on many mirror sites.<br>
+<p>The EGCS 1.0.3 release is also available on many mirror sites.<br>
 <a href="../mirrors.html">Goto mirror list to find a closer site</a>
 
 <p>We'd like to thank the numerous people that have contributed new
