--- a/htdocs/egcs-1.0/egcs-1.0.html
+++ b/htdocs/egcs-1.0/egcs-1.0.html
@@ -1,29 +1,29 @@
 <html>
 <head>
-<title>egcs-1.0</title>
+<title>EGCS 1.0</title>
 </head>
 <body>
-<h1 align="center">egcs-1.0</h1>
+<h1 align="center">EGCS 1.0</h1>
 
 <p>December 3, 1997
 
-<p>We are pleased to announce the release of egcs-1.0.
+<p>We are pleased to announce the release of EGCS 1.0.
 
-<p>egcs is a collaborative effort involving several groups of hackers using
+<p>EGCS is a collaborative effort involving several groups of hackers using
 an open development model to accelerate development and testing of GNU
 compilers and runtime libraries.
 
-<p>An important goal of egcs is to allow wide scale testing of experimental
-features and optimizations; therefore, egcs contains some features and
-optimizations which are still under development.  However, egcs has been
-carefully tested and should be comparable in quality to most gcc releases.
+<p>An important goal of EGCS is to allow wide scale testing of experimental
+features and optimizations; therefore, EGCS contains some features and
+optimizations which are still under development.  However, EGCS has been
+carefully tested and should be comparable in quality to most GCC releases.
 
-<p>egcs-1.0 is based on an August 2, 1997 snapshot of the gcc-2.8 development
-sources; it contains nearly all of the new features found in gcc-2.8.
+<p>EGCS 1.0 is based on an August 2, 1997 snapshot of the GCC 2.8 development
+sources; it contains nearly all of the new features found in GCC 2.8.
 
 
-<p>egcs-1.0 also contains many improvements and features not found in gcc-2.7
-and even the soon to be released gcc-2.8 compilers.
+<p>EGCS 1.0 also contains many improvements and features not found in GCC 2.7
+and even the soon to be released GCC 2.8 compilers.
 <ul>
   <li>Integrated C++ runtime libraries, including support for most major
   linux systems!
@@ -37,33 +37,33 @@ and even the soon to be released gcc-2.8 compilers.
 <p>See the <a href="features.html">new features</a> page for a more complete
 list of new features.
 
-<p>The egcs-1.0 release includes installation instructions in both HTML
+<p>The EGCS 1.0 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
-of the egcs-1.0 distribution).  However, we also keep the most up to date
+of the EGCS 1.0 distribution).  However, we also keep the most up to date
 <a href="../install/index.html">installation instructions</a>
 and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
 <p>And, we can't in good conscience fail to mention some
-<a href="caveats.html">caveats</a> to using egcs.
+<a href="caveats.html">caveats</a> to using EGCS.
 
 <p>Update: The T1 into our main California offices has been 100% saturated
-since shortly after the release.  We've added an egcs-1.0 mirror at our
+since shortly after the release.  We've added an EGCS 1.0 mirror at our
 Massachusetts office to help share the load.  We also encourage folks to
 use the many mirrors available throughout the world.
 
 <p>Update: Big thanks to Stanford for providing a high speed link for
-downloading egcs! (go.cygnus.com)
+downloading EGCS! (go.cygnus.com)
 
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.0
+Download EGCS 1.0
 from ftp.cygnus.com (USA California)</a>
 <p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download egcs-1.0 from go.cygnus.com (USA California -- High speed link
+Download EGCS 1.0 from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 
 
-<p>The egcs-1.0 release should be available on most mirror sites by now.<br>
+<p>The EGCS 1.0 release should be available on most mirror sites by now.<br>
 <a href="../mirrors.html">Goto mirror list to find a closer site</a>
 
 <p>We'd like to thank the numerous people that have contributed new
@@ -71,7 +71,7 @@ features, test results, bugfixes, etc.  Unfortunately, they're far
 too numerous to mention by name.
 
 <hr>
-<i>Last modified on February 22, 1999.</i>
+<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
