--- a/htdocs/egcs-1.0/features-2.8.html
+++ b/htdocs/egcs-1.0/features-2.8.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title> gcc-2.8 features in egcs </title>
+<title> GCC 2.8 features in egcs </title>
 </head>
 <body>
-<h1 align="center">gcc-2.8 features in egcs</h1>
+<h1 align="center">GCC 2.8 features in egcs</h1>
 
 <pre>
 
