Remove duplicate word.

--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -34,7 +34,7 @@ and <a href="buildstat.html">build/test status</a> are on the web pages.  We
 will update those pages as new information becomes available.
 
 
-<p> The GCC developers developers would like to thank the numerous people that
+<p> The GCC developers would like to thank the numerous people that
 have contributed new features, test results, bugfixes, etc to GCC.  This
 <a href="../thanks.html">amazing group of volunteers</a> is what makes GCC 
 successful.
@@ -54,7 +54,7 @@ successful.
 <a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.
 
 <hr>
-<i>Last modified on July 28, 1999.</i>
+<i>Last modified on July 29, 1999.</i>
 
 </body>
 </html>
