"egcs team" -> "GCC team"

--- a/htdocs/gccmission.html
+++ b/htdocs/gccmission.html
@@ -65,7 +65,7 @@ and to more thoroughly test and extend the features of GCC.</p>
 
 <hr>
 <address>
-<a href="about.html">The egcs team</a>
+<a href="about.html">The GCC team</a>
 <br>
 <small><i>Last modified on April 23, 1999.</i></small>
 </address>
